--- a/CSS/second/index.css
+++ b/CSS/second/index.css
@@ -88,6 +88,7 @@ h5, h4, h6 {
 }
 
 .local_report_detail {
+    margin: 10px 0px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
