--- a/CSS/second/index.css
+++ b/CSS/second/index.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap');
 
+*{
+    box-sizing: border-box;
+}
+
 body {
     height: 100vh;
     background-image: linear-gradient(to bottom right, #546BB9,#55A7BD, #54D0AC);
@@ -33,7 +37,8 @@ h5, h4, h6 {
 }
 
 .main_div {
-    width: fit-content;
+    width: 35vw;
+    min-width: fit-content;
     margin: 20px auto;
     display: flex;
     flex-direction: column;
@@ -42,9 +47,8 @@ h5, h4, h6 {
 
 .report {
     display: flex;
-    gap: 25px;
     flex-wrap: wrap;
-    justify-content:center;
+    justify-content:space-between;
 }
 
 .report_detail {
@@ -58,20 +62,17 @@ h5, h4, h6 {
     padding-bottom: 10px;
 }
 
-.dotted_line {
-  white-space: nowrap; 
-  width: 50px; 
-  overflow: hidden;
-  text-overflow: ellipsis;
-}
+
 
 #local_report {
     background-image: linear-gradient(to bottom right, #5376AE, #5295B0);
-
+    width: 45%;
 }
 
 #forecast_report {
     background-image: linear-gradient(to bottom right, #4180a5, #5497B1);
+    width: 51%;
+
 }
 
 #forecast_report h6 {
@@ -81,14 +82,18 @@ h5, h4, h6 {
 .d1 {
     display: flex;
     gap: 10px;
+    height: 142px;
+    justify-content: space-between;
 }
+
+
 
 .compass_symbol {
     font-size: x-large;
 }
 
 .local_report_detail {
-    margin: 10px 0px;
+    margin-top: 10px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -96,7 +101,7 @@ h5, h4, h6 {
 
 
 .daywise_report {
-    padding: 20px;
+    padding: 10px;
     background-image: linear-gradient(to bottom right, #538BB0, #53ADAD);
     border-radius: 10px;
     display: flex;
@@ -112,4 +117,13 @@ h5, h4, h6 {
     padding: 5px;
 }
 
+.demo {
+    display: flex;
+    justify-content: space-between;
+}
 
+.dotted_line {
+    display: inline-block;
+    width: 90px; 
+    overflow: hidden;
+}
