--- a/CSS/third/index.css
+++ b/CSS/third/index.css
@@ -16,23 +16,56 @@ body {
     font-weight: 200;
 }
 
-nav {
-    background-color: #363636;
-}
-
-nav a {
+.nav {
+    height: 50px;
+    width: 100%;
+    background-color: #4d4d4d;
+    position: relative;
+  }
+  
+  .nav > .nav-header {
+    display: inline;
+  }
+  
+  .nav > .nav-header > .nav-title {
+    display: inline-block;
+    font-size: 22px;
+    color: #fff;
+    padding: 10px 10px 10px 10px;
+  }
+  
+  .nav > .nav-btn {
+    display: none;
+  }
+  
+  .nav > .nav-links {
+    width: fit-content;
+    margin: auto;
+    font-size: 18px;
+  }
+  
+  .nav > .nav-links > a {
+    display: inline-block;
+    padding: 13px 10px 13px 10px;
     text-decoration: none;
-    color: white;
-}
-
-ul {
+    color: #efefef;
+  }
+  
+  .nav > .nav-links > a:hover {
+    background-color: rgba(0, 0, 0, 0.3);
+  }
+  
+  .nav > #nav-check {
+    display: none;
+  }
+/* ul {
     display: flex;
     list-style: none;
     justify-content: center;
     gap: 100px;
     margin: auto;
     padding: 10px;
-}
+} */
 
 section {
     background-color: #ECEAE6;
@@ -110,9 +143,9 @@ footer {
         height: 300px;
     }
 
-    ul {
+    /* ul {
         gap: 40px;
-    }
+    } */
 
     .offer_button {
         padding: 10px 100px;
@@ -146,17 +179,61 @@ footer {
         gap: 10px;
     }
 
-    ul {
+    /* ul {
         gap: 20px;
-    }
+    } */
 
     .offer_button {
         padding: 10px 50px;
     }
+
+    .nav > .nav-btn {
+        display: inline-block;
+        position: absolute;
+        right: 0px;
+        top: 0px;
+      }
+      .nav > .nav-btn > label {
+        display: inline-block;
+        width: 50px;
+        height: 50px;
+        padding: 13px;
+      }
+      .nav > .nav-btn > label:hover,.nav  #nav-check:checked ~ .nav-btn > label {
+        background-color: rgba(0, 0, 0, 0.3);
+      }
+      .nav > .nav-btn > label > span {
+        display: block;
+        width: 25px;
+        height: 10px;
+        border-top: 2px solid #eee;
+      }
+      .nav > .nav-links {
+        position: absolute;
+        display: block;
+        width: 100%;
+        background-color: #333;
+        height: 50%;
+        transition: all 0.3s ease-in;
+        overflow-y: hidden;
+        top: 50px;
+        left: 0px;
+      }
+      .nav > .nav-links > a {
+        display: block;
+        width: 100%;
+      }
+      .nav > #nav-check:not(:checked) ~ .nav-links {
+        height: 0px;
+      }
+      .nav > #nav-check:checked ~ .nav-links {
+        height: calc(100vh - 50px);
+        overflow-y: auto;
+      }
     
 }
 
-@media screen and (max-width: 501px) {
+/* @media screen and (max-width: 501px) {
     ul {
         gap: 10px 50px;
         flex-wrap: wrap;
@@ -166,7 +243,7 @@ footer {
         width: 40%;
         text-align: center;
     }
-}
+} */
 
 @media screen and (max-width: 481px) {
 
@@ -175,7 +252,7 @@ footer {
         padding: 10px 10px;
     }
 
-    ul {
+    /* ul {
         gap: 10px 50px;
         flex-wrap: wrap;
     }
@@ -183,7 +260,7 @@ footer {
     ul li {
         width: 40%;
         text-align: center;
-    }
+    } */
 
     .offer_button {
         padding: 10px 10px;
