--- a/CSS/fifth/index.css
+++ b/CSS/fifth/index.css
@@ -28,6 +28,7 @@ body {
     display: grid;
     grid-template-columns: 10% 80% 10%;
     align-items: center;
+    cursor: pointer;
 }
 
 .company_name {
@@ -64,6 +65,8 @@ body {
     grid-template-columns: 50% 50%;
     grid-template-rows: 100%;
     align-items: center;
+    width: 100%;
+    height: 100%;
 }
 
 .section_heading {
@@ -84,6 +87,7 @@ body {
     background-color: white;
     border-radius: 35px;
     color: #C73386;
+    cursor: pointer;
 }
 
 .s2 img {
@@ -96,24 +100,16 @@ body {
     font-size: large;
     align-items: center;
     color: gray;
+    cursor: pointer;
+
 }
 
 .nav {
+    display: none;
     height: fit-content;
     width: 100%;
-    background-color: #4d4d4d;
+    /* background-color: #4d4d4d; */
     position: relative;
-  }
-  
-  .nav > .nav-header {
-    display: inline;
-  }
-  
-  .nav > .nav-header > .nav-title {
-    display: inline-block;
-    font-size: 22px;
-    color: #fff;
-    padding: 10px 10px 10px 10px;
   }
   
   .nav > .nav-btn {
@@ -134,7 +130,7 @@ body {
   }
   
   .nav > .nav-links > a:hover {
-    background-color: rgba(0, 0, 0, 0.3);
+    /* background-color: rgba(0, 0, 0, 0.3); */
   }
   
   .nav > #nav-check {
@@ -199,15 +195,102 @@ body {
 
 @media screen and (max-width: 680px) {
 
-    .main_section {
-        display: block;
-    } 
-
-    .main_section .s1, .s2 {
-        width: fit-content;
-        margin: 10px auto;
+    .main_grid_container {
+        display: grid;
+        grid-template-rows:10vh 7vh auto 10vh;
     }
 
+    .main_section {
+        display: flex;
+        flex-direction: column;
+        gap: 30px;
+        align-items:flex-start;
+        justify-content: center;
+    } 
+
+    .s2 img {
+        object-fit: cover;
+        width: 60%;
+        height: 100%;
+    }
+
+    .s2, .s1 {
+        height: 100%;
+        width: 100%;
+        text-align: center;
+    }
+
+    .main_section .s1, .s2 {
+        /* width: fit-content; */
+        /* margin: 10px auto; */
+    }
+
+    .nav {
+        display: block;
+        height: 100%;
+        cursor: pointer;
+    }
+
+    .navbar {
+        display: grid;
+        grid-template-columns: 50% 50%;
+        align-items:center;
+    }
+
+    #button_1 {
+        text-align: right;
+    }
+
+    .link {
+        display: none;
+    }
+
+    .nav > .nav-btn {
+        display: inline-block;
+        position: absolute;
+        right: 0px;
+        top: 0px;
+        margin-right: 30px;
+      }
+      .nav > .nav-btn > label {
+        display: inline-block;
+        width: 50px;
+        height: 50px;
+        padding: 13px;
+      }
+      .nav > .nav-btn > label:hover,.nav  #nav-check:checked ~ .nav-btn > label {
+        /* background-color: rgba(0, 0, 0, 0.3); */
+      }
+      .nav > .nav-btn > label > span {
+        display: block;
+        width: 25px;
+        height: 10px;
+        border-top: 2px solid black;
+      }
+      .nav > .nav-links {
+        position: absolute;
+        display: block;
+        /* width: 100%; */
+        width: calc(100% - 60px);
+        /* transition: all 0.3s ease-in; */
+        overflow-y: hidden;
+        background-color: rgb(151, 149, 149);
+
+        top: 50px;
+        
+      }
+      .nav > .nav-links > a {
+        display: block;
+        width: 100%;
+        color: black;
+      }
+      .nav > #nav-check:not(:checked) ~ .nav-links {
+        height: 0px;
+      }
+
+      .nav > #nav-check:not(:checked) ~ .nav {
+        height: 700px;
+      }
 }
 
 
