--- a/CSS/fifth/index.css
+++ b/CSS/fifth/index.css
@@ -220,9 +220,12 @@ body {
         text-align: center;
     }
 
-    .main_section .s1, .s2 {
-        /* width: fit-content; */
-        /* margin: 10px auto; */
+    .main_section .s1 {
+        margin-top: 30px;
+    }
+
+    .main_section .s2 {
+        margin-bottom: 30px;
     }
 
     .nav {
