--- a/SASS/first/index.scss
+++ b/SASS/first/index.scss
@@ -16,7 +16,6 @@ h1, h5, h4 {
     text-align: center;
     letter-spacing: 3px;
     margin: 0px;
-
 }
 
 h5, h4, h6 {
@@ -54,17 +53,14 @@ h5, h4, h6 {
 .report_detail {
     border-radius: 10px;
     padding: 20px;
-
 }
 
 .report_detail {
   h5:first-child {
     border-bottom: 2px solid white;
     padding-bottom: 10px;
+  }
 }
-}
-
-
 
 #local_report {
     background-image: linear-gradient(to bottom right, #5376AE, #5295B0);
@@ -77,8 +73,10 @@ h5, h4, h6 {
 
 }
 
-#forecast_report h6 {
+#forecast_report {
+  h6 {
     margin: 5px 0px;
+  }
 }
 
 .d1 {
@@ -87,8 +85,6 @@ h5, h4, h6 {
     height: 142px;
     justify-content: space-between;
 }
-
-
 
 .compass_symbol {
     font-size: x-large;
@@ -101,7 +97,6 @@ h5, h4, h6 {
     justify-content: space-between;
 }
 
-
 .daywise_report {
     padding: 10px;
     background-image: linear-gradient(to bottom right, #538BB0, #53ADAD);
@@ -113,14 +108,14 @@ h5, h4, h6 {
 .daywise_report {
   div:not(:last-child) {
     border-right: 2px solid white;
-}
+  }
 }
 
 .daywise_report{
   div {
     width: 20%;
     padding: 5px;
-}
+  }
 }
 
 .demo {
