JS first task complete

--- a/SASS/second/index.scss
+++ b/SASS/second/index.scss
@@ -128,8 +128,9 @@ body {
   .nav {
     .nav-links {
         width: fit-content;
-        margin: auto;
         font-size: 18px;
+        margin: auto;
+        // margin-bottom: 30px;
       }
   }
   
