--- a/Javascript/TO-DO/index.css
+++ b/Javascript/TO-DO/index.css
@@ -102,6 +102,7 @@ ul li span:hover {
 
 .d2 {
     padding-left: 10px;
+    width: 100%;
 }
 
 .checkbox {
@@ -113,3 +114,4 @@ ul li span:hover {
     text-decoration: line-through;
     text-decoration-thickness: 2px;
 }
+
