--- a/CSS/ReactNative_Clone/index.css
+++ b/CSS/ReactNative_Clone/index.css
@@ -143,6 +143,7 @@ p {
 .dropdown_items {
   display: none;
   position: absolute;
+  margin-top: 5px;
   background-color: white;
   color: gray;
   list-style: none;
@@ -151,15 +152,12 @@ p {
   border-radius: 10px;
   width: 180px;
   font-size: 0.975rem;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
 }
 
 .dropdown_items li {
   margin: 5px 0px;
   padding: 5px;
-}
-
-.dropdown:hover .dropdown_items {
-  display: block;
 }
 
 .dropdown_items li:hover {
@@ -517,7 +515,7 @@ p {
 .community_desc_left {
   width: 50%;
   padding-right: 50px;
-  border-right: none;
+  border-right: 1px solid rgb(170, 169, 169);
 }
 
 .community_desc_right {
@@ -959,6 +957,10 @@ p {
   .headerHero_left .tagline {
     font-size: 30px;
     text-align: center;
+  }
+  .nativeCode_code_content {
+    width: 100%;
+    padding-left: 68px;
   }
   .getStarted_content {
     width: 80%;
