--- a/CSS/ReactNative_Clone/index.scss
+++ b/CSS/ReactNative_Clone/index.scss
@@ -283,7 +283,6 @@ p {
 .headerHero_left {
   display: flex;
   flex-direction: column;
-  justify-content: center;
 }
 
 .headerHero_left {
@@ -320,12 +319,11 @@ p {
   transition: 0.2s ease-out;
 }
 
-.actionButton {
   .primary:hover {
     background-color: #fff;
-    color: #282c34;
+    color: #000;
   }
-}
+
 
 .primary {
   background-color: #61dafb;
@@ -343,6 +341,10 @@ p {
   color: #61dafb;
 }
 
+.secondary:hover {
+  color: white;
+}
+
 .actionButton.secondary:after {
   content: "›";
   font-size: 24px;
@@ -352,20 +354,33 @@ p {
 .desc {
   color: rgb(28, 30, 33);
   line-height: 28.05px;
+  font-weight: 100;
 }
 
 .nativeApps {
   width: 100%;
   max-width: 900px;
+  max-height: 400px;
   display: flex;
   margin: 0 auto;
   justify-content: space-between;
-  gap: 60px;
+  // gap: 60px;
   overflow-y: hidden;
 }
 
 .nativeApps_left {
+  width: 100%;
+  padding-right: 50px;
   max-height: 400px;
+  margin-top: -25px;
+}
+
+.nativeApps_left img {
+  height: 520px;
+}
+
+.nativeApps_right {
+  padding-left: 50px;
 }
 
 // .nativeApps_right {
@@ -403,24 +418,14 @@ p {
   overflow: auto;
   width: 50%;
   background-color: #282c34;
-}
-
-.nativeCode_right_content {
-  max-width: 450px;
-  padding: 16px 1.5rem;
-  color: white;
-  letter-spacing: 0px;
   position: relative;
 }
 
-// .nativeCode_right_content_inner {
-//   display: flex;
-//   justify-content: space-between;
-//   position: sticky;
-//   top: 10px;
-//   z-index: 1;
-//   border: 2px solid red;
-// }
+.nativeCode_right_content {
+  // max-width: 450px;
+  padding: 16px 1.5rem;
+  color: white;
+}
 
 .copy-btn {
   display: none;
@@ -432,8 +437,8 @@ p {
   border-radius: 5px;
   opacity: 0.4;
   position: absolute;
-  right: 0rem;
-  top: 1rem;
+  left: 50%;
+  // top: 1rem;
 }
 
 .nativeCode_right:hover {
@@ -449,6 +454,16 @@ p {
     font-weight: 400;
     font-size: 15.3px;
   }
+}
+
+.nativeCode_code_content {
+  padding: 0 1rem;
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  top: 50px;
+  padding-bottom: 50px;
+  line-height: 22.95px;
 }
 
 .keyword {
@@ -476,14 +491,6 @@ p {
   white-space: pre !important;
 }
 
-.nativeCode_code_content {
-  display: flex;
-  flex-direction: column;
-  position: absolute;
-  top: 50px;
-  padding-bottom: 50px;
-  line-height: 22.95px;
-}
 
 .nativeDevelopment {
   max-width: 900px;
@@ -495,11 +502,14 @@ p {
 
 .nativeDevelopment_left {
   width: 50%;
-  max-height: 200px;
+  position: relative;
+  margin-top: -30px;
 }
 
 .native_development_img {
   width: 400px;
+  max-height: 370px;
+  position: absolute;
 }
 
 .nativeDevelopment_right {
@@ -537,6 +547,13 @@ p {
   padding-left: 50px;
 }
 
+.crossPlatform_right svg {
+  margin: -20px 0;
+  max-width: 400px;
+}
+
+
+
 .fastRefresh {
   max-width: 900px;
   display: flex;
@@ -547,9 +564,12 @@ p {
 .fastRefresh_left {
   overflow: hidden;
   margin: -50px 0px;
-  // margin-top: -50px;
-  // margin-bottom: -50px;
+  max-height: 348px;
 }
+
+// .fastRefresh_left video{
+//   height: 348;
+// }
 
 .fastRefresh_right {
   width: 33.33%;
@@ -584,7 +604,9 @@ p {
 
 .videoContent_first_right iframe,
 .videoContent_second_right iframe {
-  width: 100%;
+  width: 560px;
+  height: 315px;
+  border: none;
 }
 
 .videoContent_second {
@@ -623,6 +645,11 @@ p {
   border-right: 1px solid rgb(170, 169, 169);
 }
 
+.community_desc_left .firstP img {
+  float: left;
+  margin-right: 20px;
+}
+
 .community_desc_right {
   width: 50%;
   padding-left: 50px;
@@ -631,12 +658,14 @@ p {
 .grid_container {
   display: grid;
   grid-template-columns: repeat(5, auto);
-  grid-row-gap: 15px;
+  grid-gap: 16px;
 }
 
 .grid_container {
   img {
-    border-radius: 10px;
+    max-width: 100%;
+    border-radius: 16px;
+    box-shadow: 0 6px 14px hsla(0,0%,8%,.08);
   }
 }
 
@@ -708,8 +737,8 @@ p {
   border-top: 1px solid gray;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
-  /* display: flex;
-    flex-direction: column; */
+  display: flex;
+  flex-direction: column; 
   padding: 30px 30px 0;
   position: relative;
   width: 600px;
@@ -722,19 +751,26 @@ p {
     font-size: 26px;
     left: 15px;
     position: absolute;
-    top: -5px;
+    top: 0px;
+    letter-spacing: -2px;
   }
 }
 
 .getStarted {
   .terminal {
-    p:first-child:before {
+    code:first-child:before {
       color: gray;
       content: ">";
-      left: 15px;
+      left: -15px;
       position: absolute;
     }
   }
+}
+
+code {
+  font-size: 18px;
+  position: relative;
+  margin: 5px 0;
 }
 
 .step_name {
@@ -869,10 +905,13 @@ p {
   //   height: 100vh;
   // }
 
+
+
   .navbar-sidebar-brand {
     display: flex;
     justify-content: space-between;
-    padding: 10px;
+    align-items: center;
+    padding: 16px;
     background-color: #20232a;
   }
 
@@ -882,7 +921,8 @@ p {
   }
 
   .navbar-sidebar-links {
-    color: black;
+    color: #606770;
+    font-weight: 600;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -890,20 +930,21 @@ p {
     cursor: pointer;
     padding: 10px;
     font-size: 17px;
-    font-weight: 400;
+    font-weight: 600;
     width: 100%;
   }
 
   .navbar-sidebar-links a {
     // position: relative;
     text-decoration: none;
-    color: black;
+    color: #606770;
+    font-weight: 600;
     width: 100%;
     text-align: start;
   }
 
   .navbar-sidebar-item {
-    padding: 10px 10px 0px;
+    padding: 4px 12px;
     width: 100%;
   }
 
@@ -972,14 +1013,32 @@ p {
   }
 
   .headerHero_left {
-    display: flex;
-    flex-direction: column;
     align-items: center;
   }
 
   .nativeApps {
+    max-width: 100%;
     flex-direction: column-reverse;
     align-items: center;
+    max-height: inherit;
+    // padding: 0;
+    margin: 0;
+  }
+
+  .nativeApps_left {
+    padding-right: 0px;
+    margin-top: 0px;
+    display: flex;
+    justify-content: center;
+    max-height: 300px;
+  }
+  
+  .nativeApps_left img {
+    width: 66.66%;
+  }
+  
+  .nativeApps_right {
+    padding-left: 0px;
   }
 
   .nativeCode_content {
@@ -1009,7 +1068,7 @@ p {
 
   .nativeCode_right {
     width: 100%;
-    height: 28rem;
+    // height: 28rem;
     margin-top: 0px;
     margin-bottom: 0px;
     overflow: auto;
@@ -1050,21 +1109,34 @@ p {
     // padding-bottom: 0px;
   }
 
+
   .nativeDevelopment {
+    max-width: 100%;
     flex-direction: column-reverse;
     gap: 2rem;
     padding: 50px 68px;
+    margin: 0;
   }
 
   .nativeDevelopment_left {
-    margin: 0 auto;
-    max-height: 300px;
+    width: 100%;
+    margin-top: 0px;
+    height: 250px;
+    display: flex;
+    justify-content: center;
+  }
+  
+  .native_development_img {
+    width: 80%;
+    position: absolute;
   }
 
   .nativeDevelopment_right {
     width: 100%;
     padding-left: 0px;
   }
+
+  ////////////////////////////////////////
 
   .crossPlatform_content {
     display: flex;
@@ -1083,17 +1155,30 @@ p {
     display: flex;
     justify-content: center;
   }
+  
+  .crossPlatform_right svg {
+    margin: 0 auto;
+    max-width: 100%;
+  }
+
+  //////////////////////////
 
   .fastRefresh {
+    max-width: 100%;
+    margin: 0;
     display: flex;
     flex-direction: column-reverse;
     gap: 2rem;
+    padding-bottom: 0px;
   }
 
   .fastRefresh_left {
-    margin: 0px;
-    display: flex;
-    justify-content: center;
+    margin: 0px -68px;
+  }
+
+  .fastRefresh video {
+    width: 100%;
+    height: auto;
   }
 
   .fastRefresh_right {
@@ -1127,7 +1212,8 @@ p {
   }
 
   .community {
-    margin: 0;
+    // max-width: 100%;
+    // margin: 0 auto;
   }
 
   .community_desc {
@@ -1153,13 +1239,8 @@ p {
   }
 
   .grid_container {
-    width: 100%;
-    max-width: 400px;
-    margin: 0 auto;
-    display: grid;
-    justify-content: space-between;
-    grid-template-columns: repeat(5, auto);
-    grid-row-gap: 25px;
+    max-width: 500px;
+    margin: 1rem auto;
   }
 
   .footer_content {
@@ -1178,9 +1259,13 @@ p {
 }
 
 @media screen and (max-width: 760px) {
+
+  .social_links {
+    margin-top: -2rem;
+  }
   .headerHero_left {
     .title {
-      font-size: 55px;
+      font-size: 60px;
       text-align: center;
       line-height: 1;
       margin-bottom: 10px;
@@ -1210,6 +1295,15 @@ p {
 }
 
 @media screen and (max-width: 552px) {
+  .nativeApps_left img {
+    width: 100%;
+}
+  .native_development_img {
+    width: 80%;
+    max-height: auto;
+    position: absolute;
+  }
+
   .buttons {
     display: flex;
     flex-direction: column;
@@ -1220,10 +1314,6 @@ p {
 }
 
 @media screen and (max-width: 500px) {
-  .grid_container img {
-    width: 52px;
-    height: 52px;
-  }
 
   .footer_col {
     width: 100%;
@@ -1237,14 +1327,17 @@ p {
 }
 
 @media screen and (max-width: 480px) {
-  .section {
-    padding: 50px 20px;
+
+  .headerHero_left {
+    align-items: flex-start;
   }
 
-  .native_development_img,
-  .nativeApps_left img,
-  .crossPlatform_right img {
+  .actionButton {
     width: 100%;
+    text-align: center;
+  }
+  .section {
+    padding: 50px 20px;
   }
 
   .nativeDevelopment {
