--- a/CSS/ReactNative_Clone/index.css
+++ b/CSS/ReactNative_Clone/index.css
@@ -951,7 +951,8 @@ code {
     opacity: 0.4;
   }
   .copy-btn {
-    right: 30px;
+    left: 95%;
+    top: 0.5rem;
   }
   .nativeCode_code_content {
     width: 50%;
