--- a/CSS/ReactNative_Clone/index.scss
+++ b/CSS/ReactNative_Clone/index.scss
@@ -1099,7 +1099,7 @@ code {
   }
 
   .nativeCode_code_content {
-    width: 50%;
+    width: fit-content;
     display: flex;
     justify-content: center;
     // gap: 2rem;
