--- a/CSS/ReactNative_Clone/index.css
+++ b/CSS/ReactNative_Clone/index.css
@@ -949,8 +949,6 @@ code {
     padding: 6.8px;
     border-radius: 5px;
     opacity: 0.4;
-  }
-  .copy-btn {
     left: 95%;
     top: 0.5rem;
   }
@@ -1094,8 +1092,11 @@ code {
     text-align: center;
   }
   .nativeCode_code_content {
-    width: 100%;
-    padding-left: 68px;
+    padding-left: 0;
+    padding-right: 0;
+  }
+  .copy-btn {
+    left: 90%;
   }
   .getStarted_content {
     width: 80%;
@@ -1151,5 +1152,8 @@ code {
   .nativeCode_code_content {
     width: 100%;
     padding-left: 20px;
+  }
+  .copy-btn {
+    left: 85%;
   }
 }/*# sourceMappingURL=index.css.map */
