--- a/CSS/ReactNative_Clone/index.css
+++ b/CSS/ReactNative_Clone/index.css
@@ -409,8 +409,9 @@ p {
   padding: 6.8px;
   border-radius: 5px;
   opacity: 0.4;
-  position: absolute;
+  position: sticky;
   left: 50%;
+  top: 1rem;
 }
 
 .nativeCode_right:hover .copy-btn {
@@ -515,6 +516,10 @@ p {
 .crossPlatform_right svg {
   margin: -20px 0;
   max-width: 400px;
+}
+
+.crossPlatform_right svg tspan {
+  font-family: "OptimisticDisplay";
 }
 
 .fastRefresh {
@@ -748,6 +753,10 @@ code {
   padding-top: 8px;
 }
 
+.footer_item a {
+  color: rgb(235, 237, 240);
+}
+
 .footer_bottom {
   margin: 30px 0px;
 }
@@ -805,6 +814,13 @@ code {
   .lightMode_icon {
     display: none;
   }
+  .sidebar_lightMode_icon:hover {
+    background-color: #444950;
+    border-radius: 50%;
+  }
+  .sidebar_close_btn:hover {
+    background-color: #444950;
+  }
   .navbar-sidebar-brand {
     display: flex;
     justify-content: space-between;
@@ -818,7 +834,8 @@ code {
   }
   .navbar-sidebar-links {
     color: #606770;
-    font-weight: 600;
+    font-family: "OptimisticDisplay";
+    font-weight: 400;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -826,19 +843,23 @@ code {
     cursor: pointer;
     padding: 10px;
     font-size: 17px;
-    font-weight: 600;
     width: 100%;
   }
   .navbar-sidebar-links a {
     text-decoration: none;
     color: #606770;
-    font-weight: 600;
+    font-family: "OptimisticDisplay";
+    font-weight: 400;
     width: 100%;
     text-align: start;
   }
   .navbar-sidebar-item {
     padding: 4px 12px;
     width: 100%;
+  }
+  .navbar-sidebar-item:hover {
+    background-color: rgba(0, 0, 0, 0.05);
+    border-radius: 5px;
   }
   .sidebar_dropdown_title {
     display: flex;
@@ -907,11 +928,8 @@ code {
     padding-left: 0px;
   }
   .nativeCode_content {
-    display: flex;
     flex-direction: column;
     align-items: center;
-    overflow: auto;
-    gap: 2rem;
     padding: 0px;
   }
   .nativeCode_left {
@@ -1013,6 +1031,7 @@ code {
   }
   .fastRefresh_left {
     margin: 0px -68px;
+    margin-bottom: -50px;
   }
   .fastRefresh video {
     width: 100%;
